--- a/lh/02.md
+++ b/lh/02.md
@@ -51,6 +51,8 @@
 
 所以整体看来，虽然婚姻持续了多年，但除了前两年正常外，后面几年要么是分居，要么是带娃矛盾，而且带娃过程中我也有经验了，大都是让她父母主动或被动过来，虽然她对自己父母也不怎么样，但至少能沟通，后面这几年我也实在不想多参合家里的事情，要么在公司加班，要么带娃就不跟她一起带，自己带出去玩或和前岳父母一起。2016的时候矛盾还在可控范围，2017年打架后是他家介入，她老实了一段时间，但是经历2018年的失望，2019年的心寒，我最终还是在2020年提出离婚（更多也是孩子的原因，2019年两个孩子送回我父母身边，让我多了一份放心，至少不用担心和她在深圳矛盾激化殃及孩子）
 
+补充说明一下为什么在2017年打架之后有了老二，原本是一个意外，当时她家人来劝，有一个建议就是生个二胎，而且那场风波过后家里也的确有改观，就留了下来。积怨是一个累计的过程，但是生活波折不是线性的。当然也有个原因是涉及孩子，所以相关的事情我就不说了
+
 ### 2020
 
 2020年初，因为年前她来我老家看孩子，期间又一次激化矛盾，她在年前就跑回了深圳，我正式下决心离婚，联系了之前的律师准备材料，并跟她正式沟通这些事情。考虑到孩子的问题，我倾向于将孩子都放在我老家，然后我回老家和父母一起带，因为在2019年这样带下来效果很好，她一开始并没有直接反对，而是着重问财产怎么分，事实上就是在刺探财产情况，虽然在当时的我看来是用不着刺探，婚后家里财务都是公开的，所以简单跟她梳理了一下，但是在得到这些信息后，她开始无理取闹，说我一定隐瞒了，我也懒得再解释，丢下一句“那你自己去查吧”就拉黑了，这样至少不会微信短信天天响个不停。然后她都是发邮件，我定期查看，避免骚扰正常工作生活
