--- a/lh/04.md
+++ b/lh/04.md
@@ -71,8 +71,10 @@
 ```
 我在群里继续骂了好几页，她不是喜欢标榜自己善良和道德吗，我就专门针对她和她家人的下三路行为说，包括她哥换了N个相亲对象，都是上完就跑路，她堂哥在村里出轨被抓，堂哥的女儿是怎么在外面染上尿道炎之类。这些话都是和她或她家人闲聊时候得知，我当然知道夫妻之间说的这种私事不应该在外面宣扬，但是想想看反过来，对于我家的事情她不但宣扬，还歪曲事实，你不仁我也只能不义了，至少我说的都是实情。这时候他们都不说话了，当天中午，我律师电话过来，说法官联系她了，本来法官打算排期处理的，现在提前到明天加班处理我们的问题，让明天上午到法院当面再调解。我同意第二天去，但是话也先说清楚，是这次冻结的事情，而不是被她用冻结财产要挟着调解财产分配的事情
 
-第二天到法院，因为法官是加班抽时间，所以是中午快吃饭时才沟通，对于群里吵架的事情，我律师只是简单说“冻结账户的确对生活影响很大，所以我的当事人比较失态”来作为开场白。法官和对方也默契地没发表什么意见，我则是一副无所谓的样子，就好像昨天没说过那些。前妻和她律师还是想逼迫我接受不公平的调解，我完全没接茬，只关心账户什么时候解冻。法官跟她说首先肯定是要解冻我账户的，因为已经影响到了我正常生活，按照法律也是不能这样一冻了之，随后将我们分开到两个房间调解。在我这边，法官的大意是说前妻现在带女儿上学，也没有工作，看我能不能将手里的存款分一些给她做生活费，当时我卡里只有16万，考虑到还要给父母还房子的款、老二的生活费，还有在女儿被接回深圳后，我父亲也做了手术（之前两个孩子在老家，一直拖着病没做）等，以及我也离职没有收入，而她却能给自己老家的闺蜜张某转了6万块钱，属于明显的转移财产，她那边原本生活费就是不缺的，且她自己住家里大房子，又不去交物业水电费，我这边有租房和车辆的大额支出，我就把这些情况反馈了。法官说你们这样不是解决问题的好方式，能给还是给一些，这样调解起来也比较好沟通，最后我律师也劝，权衡了一下，还是按法官建议，分一半，就是8万给她，法官说给你一张白纸，你手写个承诺书，等解冻了转给她。然后我就和律师在这个会客室写，法官到对面的会客室和前妻谈，等我写完了她们还在谈，我没有签名按手印，等她们谈完后一起过来，前妻说8万不够，要10万，我心说我不给你难道就不能解冻了？于是拿协议说，这里就8万，她还是坚持，并且又开始唱高调，说什么我在外面藏了财产，冻结了账户实际并不影响之类，我律师说这样下去就没法调了吧。于是我当着她的面把刚才写的承诺书撕了扔垃圾桶，和律师一起走了
+第二天到法院，因为法官是加班抽时间，所以是中午快吃饭时才沟通，对于群里吵架的事情，我律师只是简单说“冻结账户的确对生活影响很大，所以我的当事人比较失态”来作为开场白。法官和对方也默契地没发表什么意见，我则是一副无所谓的样子，就好像昨天没说过那些。前妻和她律师还是想逼迫我接受不公平的调解，我完全没接茬，只关心账户什么时候解冻。法官跟她说首先肯定是要解冻我账户的，因为已经影响到了我正常生活，按照法律也是不能这样一冻了之，随后将我们分开到两个房间调解。在我这边，法官的大意是说前妻现在带女儿上学，也没有工作，看我能不能将手里的存款分一些给她做生活费，当时我卡里只有16万，考虑到还要给父母还房子的款、老二的生活费，还有在女儿被接回深圳后，我父亲也做了手术（之前两个孩子在老家，一直拖着病没做）等，以及我也离职没有收入，而她却能给自己老家的闺蜜张某转了6万块钱，属于明显的转移财产，她那边原本生活费就是不缺的，且她自己住家里大房子，又不去交物业水电费，我这边有租房和车辆的大额支出，我就把这些情况反馈了。法官说你们这样不是解决问题的好方式，如果钱不够，父母的欠款可以先不还，离了以后再统一计算，目前能给她生活费的话还是给一些，这样调解起来也比较好沟通，最后我律师也劝，权衡了一下，还是按法官建议，分一半，就是8万给她，法官说给你一张白纸，你手写个承诺书，等解冻了转给她。然后我就和律师在这个会客室写，法官到对面的会客室和前妻谈，等我写完了她们还在谈，我没有签名按手印，等她们谈完后一起过来，前妻说8万不够，要10万，我心说我不给你难道就不能解冻了？于是拿协议说，这里就8万，她还是坚持，并且又开始唱高调，说什么我在外面藏了财产，冻结了账户实际并不影响之类，我律师说这样下去就没法调了吧。于是我当着她的面把刚才写的承诺书撕了扔垃圾桶，和律师一起走了
 
 之后就是申请账号解冻，但是流程要走一周多，这段时间法官还是通过律师建议我分一些生活费给她，我说是她自己给脸不要的，再说我自己和孩子也需要钱，就提交了自己的离职证明，表示的确失业了。自从这个事情以后，我和她的关系更进一步降温，连孩子的事我都不想再沟通了，她发消息说法官已经“责令”（实则法官是建议）我转钱给她，我没搭茬，她又说自己找了深圳电视台法治节目，要上电视揭露我，我说那你把自己老脸收拾收拾，记得让电视台也电话采访我，正好把你家的细节都曝光一下
 
 大约过了两周，账号才解封，为防止对方再有类似行为影响生活，我给支付宝和微信都充了余额。此时已经在11月下，我就开车出去了一趟散心，再之后不久疫情解封，我也在年底外出时感染了，就在卧床中跨年，修养了比较久，法院那边可能也是阳了，让律师帮忙催问出判决的时间，却一直联系不到
+
+> 顺便一提，法院冻结财产是计入个人记录的，后续我两次入职新公司，这个情况都被背调出来，需要额外给HR解释，虽然一般来说都能解释清楚，但这个事情是会持续一辈子的
