--- a/lh/05.md
+++ b/lh/05.md
@@ -19,3 +19,5 @@
 之所以要把这个事情列一下，是想说这个事情体现了法院的一个问题：现在很多公司的期权、股权等经济事项的专业度很高也比较复杂，法院的法官并不都能弄清楚这些事情，尽管我已经花钱请翻译公司将协议（英文）翻译，并和律师写了材料做解释，但依然给了前妻这样的人钻空子和胡搅蛮缠的空间。这一点在后来的事情上也有体现，是后话
 
 此时已经是11月份，提交证据后我就跟律师说继续催促中院出判决，然后继续日常的工作和其他事宜。此时她又去跟中院申请调查令，让她的律师去北京调查我之前工作的情况，跟一审一样什么都没有调查出来
+
+这一年年中我父亲发了一次心脏病，幸好有亲戚帮忙，紧急送医做了支架手术，我也开始考虑在离婚之后回老家生活
